[REF][SLOT-64]: mucho refactor