@@ -1,11 +1,6 @@
 package com.three_tech_solutions.slot_app.data.models;
 
-import jakarta.persistence.CascadeType;
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
-import jakarta.persistence.OneToMany;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -13,7 +8,6 @@ import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -33,15 +27,7 @@ public class User implements UserDetails {
     private List<Student> students = Collections.emptyList();
     @OneToMany(cascade = CascadeType.ALL)
     @JoinColumn(name = "user_id")
-    private List<Price> prices = new ArrayList<>(
-            List.of(
-                    new Price("1 Día"),
-                    new Price("2 Días"),
-                    new Price("3 Días"),
-                    new Price("4 Días"),
-                    new Price("Clase")
-            )
-    );
+    private List<Plan> plans = Collections.emptyList();
 
     @Id
     private UUID id = UUID.randomUUID();
